Fix spacing on the homepage

--- a/css/src/4-home.css
+++ b/css/src/4-home.css
@@ -113,6 +113,10 @@
 	font-size: var(--wcus--font-size--small);
 }
 
+body.home .entry-content {
+	margin-top: 0;
+}
+
 body.home .entry-footer {
 	display: none;
 }
